# CodingChallengesFIY.CCWC-cpp

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.py
ccwc/: README.md
ccwc/c++/: CMakeLists.bak  CMakeLists.txt  Makefile  README.md  build.bat  build.sh
ccwc/c++/include/: arguments.hpp  file.hpp
ccwc/c++/src/: arguments.cpp  file.cpp  main.cpp
ccwc/c++/tests/: CMakeLists.txt  countBytes_test.cpp  countLines_test.cpp  file_test.cpp  globalTestEnvironment.cpp
ccwc/c++/tests/test_data/: capital.txt
include/: file.hpp
src/: file.cpp
tests/: CMakeLists.txt  fileTest.cpp  globalTestEnvironment.hpp
